# sentinelx-ids

./: .env.example  .gitignore  LICENSE  README.md  launcher.vbs  pyproject.toml  requirements.txt  start-backend.ps1  start-frontend.ps1  start.ps1  stop.bat
.github/workflows/: ci.yml
ai_engine/: __init__.py  anomaly_scorer.py  copilot.py  llm_integration.py  nlp_query.py
alerts/: __init__.py  notifier.py
backend/: __init__.py  ai_service.py  audit.py  auth.py  config.py  database.py  main.py  models.py  pipeline.py  pyproject.toml  schemas.py  seed.py
backend/routes/: __init__.py  ai_routes.py  alert_routes.py  audit_routes.py  auth_routes.py  copilot_routes.py  dashboard_routes.py  health_routes.py  intel_routes.py  investigation_routes.py  log_routes.py  notification_routes.py  rule_routes.py  search_routes.py
collectors/: __init__.py  demo_collector.py  file_watcher.py
detection_engine/: __init__.py  anomaly.py  correlator.py  engine.py  rule_loader.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AIButton.jsx  AIModal.jsx  (+9 more)
parsers/: __init__.py  base_parser.py  firewall_parser.py  suricata_parser.py  syslog_parser.py  web_parser.py  windows_parser.py
rules/: brute_force.yml  data_exfiltration.yml  lateral_movement.yml  persistence.yml  port_scan.yml  powershell_encoded.yml  privilege_escalation.yml  reverse_shell.yml
tests/: conftest.py  test_health.py
threat_intel/: __init__.py  engine.py  feeds.py  geo.py  scorer.py
websocket/: manager.py
(+12 files in other folders)
